# Kinect-3D-Map-Scanner

./: CMakeLists.txt  README.md
include/: defaultParamsAndUtilis.h  kinectData.h  menuAndSettings.h  wrapper.h
src/: defaultParamsAndUtilis.cpp  kinectData.cpp  main.cpp  menuAndSettings.cpp  wrapper.cpp
